adicionei a LC e TNC

--- a/3ano/LC/ficha1.ipynb
+++ b/3ano/LC/ficha1.ipynb
@@ -113,10 +113,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2ee33028",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f := (A & (! B)) is SAT? True\n"
+     ]
+    }
+   ],
    "source": [
     "from pysmt.shortcuts import Symbol, And, Not, is_sat, get_model\n",
     "\n",
@@ -183,10 +191,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7694d2bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "g := (A & (! A)) is SAT? False\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "g = f.substitute({varB:varA})\n",
     "\n",
@@ -304,10 +321,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "aa8795d9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{h, e, l, o, w, r, d}\n",
+      "Serialization of the formula:\n",
+      "((((1 <= h) & (h <= 10)) & ((1 <= e) & (e <= 10)) & ((1 <= l) & (l <= 10)) & ((1 <= o) & (o <= 10)) & ((1 <= w) & (w <= 10)) & ((1 <= r) & (r <= 10)) & ((1 <= d) & (d <= 10))) & (((h + e + l + l + o) = (w + o + r + l + d)) & ((h + e + l + l + o) = 25)))\n"
+     ]
+    }
+   ],
    "source": [
     "from pysmt.shortcuts import Symbol, LE, GE, Int, And, Equals, Plus, Solver, is_sat, get_model\n",
     "from pysmt.typing import INT\n",
@@ -662,7 +689,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "logica",
    "language": "python",
    "name": "python3"
   },
