tentando fazer o tp1 de LC

--- a/3ano/LC/ficha2.ipynb
+++ b/3ano/LC/ficha2.ipynb
@@ -759,6 +759,7 @@
     "Vamos usar uma família $x_{p,d}$ de variáveis binárias (i.e., que assumem valores inteiros $\\{0,1\\}$), com a seguinte semântica\n",
     "\n",
     "$$x_{p,d} = 1 \\quad \\mathbf{sse} \\quad \\mbox{o colaborador $p$ está em trabalho presencial no dia $d$} $$\n",
+    "xp,d​ = 1 sse o colaborador p estaˊ em trabalho presencial no dia d\n",
     "\n",
     "Estas $P\\times D$ variáveis são convenientemente representadas numa matriz $X$ instanciável com valores \n",
     "$\\{0,1\\}^{P\\times D }$, a que se costuma chamar *matriz de alocação*.\n",
@@ -770,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "bf3e7b4f",
    "metadata": {},
    "outputs": [],
@@ -795,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "4fd9bc3c",
    "metadata": {},
    "outputs": [],
@@ -827,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "8c4cd724",
    "metadata": {},
    "outputs": [],
@@ -857,12 +858,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "d65768d4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# completar"
+    "for d in range(D):\n",
+    "    solver.Add(sum([X[p,d] for p in range(P)]) >= 1)"
    ]
   },
   {
@@ -892,6 +894,8 @@
     "u_d = 1 \\quad \\mathbf{sse} \\quad \\mbox{no dia $d$ todos os colaboradores estão em trabalho presencial}\n",
     "$$\n",
     "\n",
+    "ud = 1 sse no dia d todos os colaboradores estao em trabalho presencial.\n",
+    "\n",
     "A nossa restrição pode agora ser modelada da seguinte forma:\n",
     "$$\n",
     "\\sum_{d < D} u_d \\geq 1\n",
@@ -902,13 +906,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "68d2c568",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<ortools.linear_solver.pywraplp.Constraint; proxy of <Swig Object of type 'operations_research::MPConstraint *' at 0x000001B5235EDF50> >"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "U = {}\n",
-    "# completar"
+    "for d in range(D):\n",
+    "    U[d] = solver.BoolVar(f'U[{d}]')\n",
+    "\n",
+    "solver.Add(sum([U[d] for d in range(D)]) >= 1)"
    ]
   },
   {
@@ -932,7 +950,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# completar"
+    "for d in range(D):\n",
+    "    solver.Add(sum([X[p,d] for p in range(P)]) >= U[d]*P) #ISTO AQUI È OQ JUNTA O U COM O X CRAZYYYYYYYYYYYYYYYYYY"
    ]
   },
   {
@@ -945,10 +964,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "d16771d3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X:\n",
+      "0 1 1 0 0 \n",
+      "1 0 1 0 0 \n",
+      "0 1 1 0 0 \n",
+      "0 0 1 1 0 \n",
+      "0 0 1 0 1 \n",
+      "U:\n",
+      "0 0 1 0 0 "
+     ]
+    }
+   ],
    "source": [
     "status = solver.Solve()\n",
     "if status == pywraplp.Solver.OPTIMAL:\n",
@@ -963,6 +997,14 @@
     "    for d in range(D):\n",
     "        print(int(U[d].solution_value()), end=' ')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e61f03cb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
