atualizei algumas aulas do terceiro ano

--- a/3ano/LC/ficha2.ipynb
+++ b/3ano/LC/ficha2.ipynb
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "76e30a37",
    "metadata": {},
    "outputs": [
@@ -440,6 +440,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0.0\n",
       "x =  1\n",
       "y =  1\n",
       "objectivo =  7\n"
@@ -454,6 +455,14 @@
     "# Adicionar variáveis\n",
     "x = solver.IntVar(0.0,solver.infinity(),\"x\")\n",
     "y = solver.IntVar(0.0,solver.infinity(),\"y\")\n",
+    "tuplo = (solver.IntVar(0.0,2.0,\"a\"),solver.IntVar(0.0,2.0,\"b\"),solver.IntVar(0.0,2.0,\"c\"))\n",
+    "\n",
+    "solver.Add(tuplo[0] == 0)\n",
+    "solver.Add(tuplo[1] == 0)\n",
+    "solver.Add(tuplo[2] == 1)\n",
+    "\n",
+    "solver.Add( tuplo == (0,0,1) )\n",
+    "\n",
     "# Adicionar restrições\n",
     "solver.Add(5*x + 6*y >= 11)\n",
     "solver.Add(7*x + 5*y >= 5)\n",
@@ -463,6 +472,7 @@
     "status = solver.Solve()\n",
     "# Interpretar os resultados\n",
     "if status == pywraplp.Solver.OPTIMAL:\n",
+    "    print(tuplo[0].solution_value())\n",
     "    print (\"x = \",round(x.solution_value()))\n",
     "    print (\"y = \",round(y.solution_value()))\n",
     "    print (\"objectivo = \",round(solver.Objective().Value()))"
@@ -1009,7 +1019,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "logica",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1023,7 +1033,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
