adicionei mais coisas isso é um sub

--- a/3ano/LC/ficha3.ipynb
+++ b/3ano/LC/ficha3.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 112,
    "metadata": {
     "id": "zvJ27RwPGTzC"
    },
@@ -93,7 +93,9 @@
     "\n",
     "horario = pywraplp.Solver.CreateSolver('SCIP')\n",
     "\n",
-    "S, P, H, D, C, N = 1, 2, 6, 5, 4, 21"
+    "\n",
+    "\n",
+    "S, P, H, D, C, N = 2, 2, 6, 5, 4, 21"
    ]
   },
   {
@@ -118,23 +120,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {
     "id": "foHh_W_8GTzD"
    },
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      5\u001b[39m         \u001b[38;5;28;01mfor\u001b[39;00m d \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(D):\n\u001b[32m      6\u001b[39m             \u001b[38;5;28;01mfor\u001b[39;00m h \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(H):\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m                 \u001b[43mX\u001b[49m\u001b[43m[\u001b[49m\u001b[43mp\u001b[49m\u001b[43m]\u001b[49m[s][d][h] = horario.IntVar(\u001b[32m0\u001b[39m,\u001b[32m1\u001b[39m,\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mx[\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mp\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m,\u001b[39m\u001b[38;5;132;01m{\u001b[39;00ms\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m,\u001b[39m\u001b[38;5;132;01m{\u001b[39;00md\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m,\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mh\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m]\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mX\u001b[39m(p,s,d,h):              \u001b[38;5;66;03m# abreviatura\u001b[39;00m\n\u001b[32m     12\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m X[p][s][d][h]           \n",
-      "\u001b[31mKeyError\u001b[39m: 0"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X = {}\n",
     "\n",
@@ -142,12 +132,11 @@
     "    for s in range(S):\n",
     "        for d in range(D):\n",
     "            for h in range(H):\n",
-    "                X[p][s][d][h] = horario.IntVar(0,1,f\"x[{p},{s},{d},{h}]\") \n",
+    "                X[p,s,d,h] = horario.IntVar(0,1,f\"x[{p},{s},{d},{h}]\") \n",
     "\n",
     "\n",
     "\n",
-    "def X(p,s,d,h):              # abreviatura\n",
-    "    return X[p][s][d][h]           \n",
+    "    \n",
     "\n",
     "T = horario.IntVar(0.0,H*D,\"T\")"
    ]
@@ -171,28 +160,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 114,
    "metadata": {
     "id": "PejhYKKbGTzE"
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'function' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m d \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(D):\n\u001b[32m      2\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m p \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(P):\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m         horario.Add(\u001b[38;5;28msum\u001b[39m([\u001b[43mX\u001b[49m\u001b[43m(\u001b[49m\u001b[43mp\u001b[49m\u001b[43m,\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43md\u001b[49m\u001b[43m,\u001b[49m\u001b[43mh\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m h \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(H) \u001b[38;5;28;01mfor\u001b[39;00m s \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(S)]) <= C)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 12\u001b[39m, in \u001b[36mX\u001b[39m\u001b[34m(p, s, d, h)\u001b[39m\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mX\u001b[39m(p,s,d,h):              \u001b[38;5;66;03m# abreviatura\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mX\u001b[49m\u001b[43m[\u001b[49m\u001b[43mp\u001b[49m\u001b[43m]\u001b[49m[s][d][h]\n",
-      "\u001b[31mTypeError\u001b[39m: 'function' object is not subscriptable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for d in range(D):\n",
     "    for p in range(P):\n",
-    "        horario.Add(sum([X(p,s,d,h) for h in range(H) for s in range(S)]) <= C)"
+    "        horario.Add(sum([X[p,s,d,h] for h in range(H) for s in range(S)]) <= C)"
    ]
   },
   {
@@ -207,18 +183,21 @@
     "\n",
     "2. Cada sala tem alocada, no máximo, um professor.\n",
     "\n",
-    "$$ (completar) $$"
+    "$$\\forall_{d< D} \\cdot \\forall_{h< H} \\cdot \\forall_{s< S} \\cdot \\quad \\sum_{p< P} x_{p,s,d,h} \\leq 1$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 115,
    "metadata": {
     "id": "G-m55v0hGTzE"
    },
    "outputs": [],
    "source": [
-    "# completar"
+    "for d in range(D):\n",
+    "    for h in range(H):\n",
+    "        for s in range(S):\n",
+    "            horario.Add(sum([X[p,s,d,h] for p in range(P)]) <= 1)"
    ]
   },
   {
@@ -234,13 +213,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 116,
    "metadata": {
     "id": "cIllcXXnGTzF"
    },
    "outputs": [],
    "source": [
-    "# completar"
+    "for p in range(P):\n",
+    "    for h in range(H):\n",
+    "        for d in range(D):\n",
+    "            horario.Add(sum([X[p,s,d,h] for s in range(S)]) <= 1)"
    ]
   },
   {
@@ -256,13 +238,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 117,
    "metadata": {
     "id": "3iOLD4lsGTzG"
    },
    "outputs": [],
    "source": [
-    "# completar"
+    "for p1 in range(P):\n",
+    "    for p2 in range(p1+1,P):\n",
+    "        horario.Add(sum([X[p1,s,d,h] for s in range(S) for d in range(D) for h in range(H)]) - sum([X[p2,s,d,h] for s in range(S) for d in range(D) for h in range(H)]) <= 2)\n",
+    "        horario.Add(sum([X[p2,s,d,h] for s in range(S) for d in range(D) for h in range(H)]) - sum([X[p1,s,d,h] for s in range(S) for d in range(D) for h in range(H)]) <= 2)"
    ]
   },
   {
@@ -278,14 +263,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "id": "_93GrtW9GTzG"
    },
    "outputs": [],
-   "source": [
-    "# completar"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -301,8 +284,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -311,10 +293,16 @@
     "outputId": "9b929781-a79b-4715-88c1-4488706c649c",
     "scrolled": true
    },
-   "outputs": [],
    "source": [
-    "# completar"
+    "horario.Add(sum([X[p,s,d,h] for d in range(D) for h in range(H) for s in range(S) for p in range(P)]) >= N)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -329,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 120,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -337,9 +325,132 @@
     "id": "uM01CqR4GTzH",
     "outputId": "32c81756-9e46-45c8-8468-e764c67232d4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "========== SOLUÇÃO ÓTIMA ENCONTRADA ==========\n",
+      "\n",
+      "SALA 0\n",
+      "------------------------------------------------------------\n",
+      "Dia        Hora       Professor \n",
+      "------------------------------------------------------------\n",
+      "0          0          0         \n",
+      "0          1          0         \n",
+      "0          2          0         \n",
+      "0          3          0         \n",
+      "0          4          1         \n",
+      "0          5          1         \n",
+      "1          0          0         \n",
+      "1          1          0         \n",
+      "1          2          0         \n",
+      "1          3          0         \n",
+      "1          4          1         \n",
+      "1          5          1         \n",
+      "2          0          0         \n",
+      "2          1          0         \n",
+      "2          2          0         \n",
+      "2          3          0         \n",
+      "2          4          1         \n",
+      "2          5          1         \n",
+      "3          0          0         \n",
+      "3          1          0         \n",
+      "3          2          0         \n",
+      "3          3          0         \n",
+      "3          4          1         \n",
+      "3          5          1         \n",
+      "4          0          0         \n",
+      "4          1          0         \n",
+      "4          2          0         \n",
+      "4          3          0         \n",
+      "4          4          1         \n",
+      "4          5          1         \n",
+      "============================================================\n",
+      "\n",
+      "SALA 1\n",
+      "------------------------------------------------------------\n",
+      "Dia        Hora       Professor \n",
+      "------------------------------------------------------------\n",
+      "0          0          1         \n",
+      "0          1          1         \n",
+      "0          2          (vazio)   \n",
+      "0          3          (vazio)   \n",
+      "0          4          (vazio)   \n",
+      "0          5          (vazio)   \n",
+      "1          0          1         \n",
+      "1          1          1         \n",
+      "1          2          (vazio)   \n",
+      "1          3          (vazio)   \n",
+      "1          4          (vazio)   \n",
+      "1          5          (vazio)   \n",
+      "2          0          1         \n",
+      "2          1          1         \n",
+      "2          2          (vazio)   \n",
+      "2          3          (vazio)   \n",
+      "2          4          (vazio)   \n",
+      "2          5          (vazio)   \n",
+      "3          0          1         \n",
+      "3          1          1         \n",
+      "3          2          (vazio)   \n",
+      "3          3          (vazio)   \n",
+      "3          4          (vazio)   \n",
+      "3          5          (vazio)   \n",
+      "4          0          1         \n",
+      "4          1          1         \n",
+      "4          2          (vazio)   \n",
+      "4          3          (vazio)   \n",
+      "4          4          (vazio)   \n",
+      "4          5          (vazio)   \n",
+      "============================================================\n",
+      "\n",
+      "TOTAL DE ALOCAÇÕES: 40\n",
+      "==============================================\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# completar"
+    "stat = horario.Solve()\n",
+    "\n",
+    "if stat == pywraplp.Solver.OPTIMAL:\n",
+    "    total_alocacoes = 0\n",
+    "    print(\"\\n========== SOLUÇÃO ÓTIMA ENCONTRADA ==========\\n\")\n",
+    "\n",
+    "    for s in range(S):  # sala\n",
+    "        print(f\"SALA {s}\")\n",
+    "        print(\"-\" * 60)\n",
+    "        tem_aula = False\n",
+    "\n",
+    "        # Cabeçalho de colunas (horários)\n",
+    "        print(f\"{'Dia':<10} {'Hora':<10} {'Professor':<10}\")\n",
+    "        print(\"-\" * 60)\n",
+    "\n",
+    "        for d in range(D):  # dia\n",
+    "            for h in range(H):  # horário\n",
+    "                linha_vazia = True\n",
+    "                for p in range(P):  # professor\n",
+    "                    if X[p, s, d, h].solution_value() == 1:\n",
+    "                        total_alocacoes += 1\n",
+    "                        tem_aula = True\n",
+    "                        linha_vazia = False\n",
+    "                        print(f\"{d:<10} {h:<10} {p:<10}\")\n",
+    "                if linha_vazia:\n",
+    "                    # Marca horário livre\n",
+    "                    print(f\"{d:<10} {h:<10} {'(vazio)':<10}\")\n",
+    "\n",
+    "        if not tem_aula:\n",
+    "            print(\"(Nenhuma aula atribuída nesta sala)\")\n",
+    "\n",
+    "        print(\"=\" * 60)\n",
+    "        print()\n",
+    "\n",
+    "    print(f\"TOTAL DE ALOCAÇÕES: {total_alocacoes}\")\n",
+    "    print(\"==============================================\\n\")\n",
+    "\n",
+    "else:\n",
+    "    print(\"Não foi possível encontrar uma solução ótima.\")\n"
    ]
   },
   {
