adicionei mais ficheiros juntamente com a pasta AE

--- a/3ano/LC/ficha1.ipynb
+++ b/3ano/LC/ficha1.ipynb
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7694d2bf",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
     "\n",
     "res = is_sat(g)\n",
     "print(\"g := %s is SAT? %s\" % (g, res))\n",
-    "\n",
+    "cxc\n",
     "print(get_model(g))"
    ]
   },
