--- a/3ano/LC/ficha3.ipynb
+++ b/3ano/LC/ficha3.ipynb
@@ -47,7 +47,7 @@
     "\n",
     "Vamos usar uma família $x_{p,s,d,h}$ de variáveis binárias (i.e., que assumem valores inteiros $\\{0,1\\}$), com a seguinte semântica\n",
     "\n",
-    "x_{p,s,d,h} == 1  {se e só se} o professor $p$ for alocado à sala $s$, no dia $d$, à hora \n",
+    "$$x_{p,s,d,h} == 1  {se e só se}$$ o professor $p$ for alocado à sala $s$, no dia $d$, à hora \n",
     "\n",
     "Estas $P\\times S\\times D\\times H$ variáveis são convenientemente representadas numa matriz $X$ instanciável com valores $\\{0,1\\}^{P\\times S\\times D\\times H}$, a que se costuma chamar *matriz de alocação*.\n",
     "\n",
@@ -564,9 +564,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "logica",
+   "display_name": "Python [conda env:logica]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-logica-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -578,9 +578,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
