--- a/3ano/TNC/TCR.ipynb
+++ b/3ano/TNC/TCR.ipynb
@@ -166,9 +166,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 9.3",
-   "language": "sage",
-   "name": "sagemath"
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -180,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
