--- a/3ano/PLC/T3/aulaT3.ipynb
+++ b/3ano/PLC/T3/aulaT3.ipynb
@@ -119,17 +119,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.14.2' requires the ipykernel package.\n",
-      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages.\n",
-      "\u001b[1;31mOr install 'ipykernel' using the command: '/opt/homebrew/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(0, 4), match='-123'>\n",
+      "('-', '123')\n",
+      "-123\n",
+      "-\n",
+      "123\n"
      ]
     }
    ],
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -217,16 +218,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<re.Match object; span=(0, 28), match=\"<a href='http://exemple.com'\">\n",
-      "(\"'\", 'http://exemple.com', \"'\")\n",
-      "http://exemple.com\n"
+      "None\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'groups'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      4\u001b[39m er5 = re.compile(\u001b[33mr\u001b[39m\u001b[33m'\u001b[39m\u001b[33m<a\u001b[39m\u001b[33m\\\u001b[39m\u001b[33ms*href=([\u001b[39m\u001b[38;5;130;01m\\'\u001b[39;00m\u001b[33m\"\u001b[39m\u001b[33m])(.*)(\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[33m)\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      5\u001b[39m \u001b[38;5;28mprint\u001b[39m(er5.match(texto))\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mer5\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmatch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtexto\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mgroups\u001b[49m())\n\u001b[32m      7\u001b[39m \u001b[38;5;28mprint\u001b[39m(er5.match(texto).group(\u001b[32m2\u001b[39m))\n",
+      "\u001b[31mAttributeError\u001b[39m: 'NoneType' object has no attribute 'groups'"
      ]
     }
    ],
